--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Install dependencies
-      run: apt-get install uuid-dev -y
+      run: sudo apt-get install uuid-dev -y
       
     - name: Build
       run: make
